fixed img stretching

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -204,6 +204,10 @@ main.root {
     font-style: italic;
 }
 
+img {
+    object-fit: contain
+}
+
 // ---------- Merchant show page stylying --------
 
 .merchant-products-container .heading {
